--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -17,6 +17,7 @@ jobs:
 
       - name: Build OVA
         run:  |
+          sudo apt update
           sudo apt -y install debos p7zip qemu-utils zerofree
           cd $GITHUB_WORKSPACE
           chmod +x scripts/tl/*.sh
