--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -23,7 +23,8 @@ jobs:
           chmod +x scripts/tl/*.sh
           chmod +x scripts/*.sh
           chmod +x *.sh
-          docker build . --file Dockerfile
+          docker build -t tlvm-builder .
+          docker run --rm --interactive --tty --net host--privileged --group-add $(stat -c '%g' /dev/kvm) --volume $(pwd):/recipes -v $(pwd)/images/:/images --workdir /recipes tlvm-builder build.sh
 
       - name: Release with Notes
         uses: softprops/action-gh-release@v1
